[package]
name = "voidbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "voice"]}
tokio = { version = "*", features = ["macros", "rt-multi-thread"]}
songbird = { version = "*", features = ["builtin-queue"]}
regex = "*"
reqwest = { version = "*", features = ["json", "stream", "blocking"] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
serde-xml-rs = "*"
md5 = "*"
futures = "*"
streamcatcher = "*"